--- a/.github/workflows/build_latex.yml
+++ b/.github/workflows/build_latex.yml
@@ -3,7 +3,7 @@ name: Build document to artifact
 on:
   push:
       branches:
-        - master
+        - main
       # file paths to consider in the event. Optional; defaults to all.
       paths:
         - 'report/**'
